force-app/main/default/objects/pse__Team_Schedule_Template_Slot__c/pse__Team_Schedule_Template_Slot__c.object-meta.xml
<CustomObject>
    <description>Template for team schedule slots.</description>
    <label>Team Schedule Template Slot</label>
    <nameField>
        <label>Team Schedule Template Slot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Team Schedule Template Slots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>