force-app/main/default/objects/pse__Team_Schedule_Template_Slot__c/fields/pse__Start_Time__c.field-meta.xml
<CustomField>
    <fullName>pse__Start_Time__c</fullName>
    <description>The time at which the schedule slot begins.</description>
    <inlineHelpText>The time at which the schedule slot begins.</inlineHelpText>
    <label>Start Time</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>pse__Start_End_Time</valueSetName>
    </valueSet>
</CustomField>