force-app/main/default/objects/pse__Team_Schedule_Template_Slot__c/fields/pse__Team_Schedule_Slot_Type__c.field-meta.xml
<CustomField>
    <fullName>pse__Team_Schedule_Slot_Type__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Team Schedule Slot Type</label>
    <referenceTo>pse__Team_Schedule_Slot_Type__c</referenceTo>
    <relationshipLabel>Team Schedule Template Slots</relationshipLabel>
    <relationshipName>Team_Schedule_Template_Slots</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>